4828 Replace DynamoDBQueryTracker